Media Querie for 768px
Made widths for 'nav a' and header 100%. 'Nav a' -- float:none to
create stacking anchor tags. Header and nav were given widths of 50%
and float: left to appear side-by-side.

--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,10 @@ nav a:hover {
 		background-color: blue;
 		width: auto;
 	}
-	nav a {
 
-	width:33%;
+	nav a {
+	width: 100%;
+	float:none;
 	display:block;
 	background:white;
 	text-align:center;
@@ -69,9 +70,22 @@ nav a:hover {
 	text-decoration:none;
 	font-size:1em;
 	}
+
+	nav	{
+		width: 50%;
+		float: left;
+	}
+
 	header object { /* logo */
-	width:auto;
-	height:250px;
+	width: 100px;
+	height: auto;
+
+	}
+
+	header	{
+		width: 50%;
+		float:left;
+	}
 }
 
 
