--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,39 @@ nav a:hover {
 	}
 }
 
+@media (max-width: 480px) {
+	body{
+		background-color: magenta;
+		width: auto;
+	}
+	nav a {
+	display:block;
+	background:white;
+	margin:0;
+	padding:0;
+	border:1px solid #ccc;
+	padding:10px 0;
+	color:black;
+	text-decoration:none;
+	font-size:1em;
+	}
+
+	nav {
+		width:100%;
+
+	}
+
+	header{
+		width: 100%;
+
+	}
+	header object { /* logo */
+	width:auto;
+	height: 170px;
+	}
 
 }
+
 /* Tablet Layout: 768px.
  * Gutters: 24px.
  * Outer margins: 28px.
